--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# ===============================
+#       FLYWAY
+# ===============================
+spring.flyway.enabled=false
+spring.flyway.baselineOnMigrate=true
+spring.flyway.baselineVersion=0
