password was saved with bCryptPasswordEncoder

--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- Maven spring security-->
-	<!--	<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
